src/objects/ExpoOrgInfo__c.object
<CustomObject>
    <fields>
        <fullName>AddressCal__c</fullName>
        <formula>State__c &amp; City__c &amp; Street__c</formula>
        <label>住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>RFU(利用禁止）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>市区郡</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostNo__c</fullName>
        <label>郵便番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>都道府県</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>町名番地</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <label>単価定義区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>税込、サービス料抜き</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>税込、サービス料込</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <default>true</default>
                    <label>税抜、サービス料抜き</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>税抜、サビース料込</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WebSiteUrl__c</fullName>
        <label>ウェブサイト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expo組織情報</label>
    <nameField>
        <label>組織名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>